--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '2.1.3.RELEASE' apply false
+	id 'org.springframework.boot' version '2.1.10RELEASE' apply false
 	id 'com.palantir.docker' version '0.21.0' apply false
 	//id 'com.google.cloud.tools.jib' version '1.0.2' apply false
 }
